--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
             <artifactId>lombok</artifactId>
             <version>1.12.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.2</version>
+        </dependency>
     </dependencies>
 
 </project>
